--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
+        tools:ignore="CoarseFineLocation" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,22 +16,45 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Medicine"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="YOUR_API_KEY" />
+
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
+            android:name=".MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".UpdateDataObat"
+            android:exported="false" />
+        <activity
             android:name=".InputReminder"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar" />
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
             android:name=".InputObat"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar" />
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
             android:name=".Notifikasi"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar" />
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
             android:name=".splashscreen"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,17 +62,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
             android:name=".MainActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar" />
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
             android:name=".ManajemenObat"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar" />
         <activity
-            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar"
             android:name=".Reminder"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Medicine.NoActionBarAndStatusBar" />
     </application>
 
 </manifest>
